--- a/dev/scss/partials/_constants.scss
+++ b/dev/scss/partials/_constants.scss
@@ -7,11 +7,12 @@ html {
   font-size: 62.5%;
 }
 
-$font-size-base: 12px;
+$font-size-small: 14px;
+$font-size-base: 16px;
 $font-size-medium: 20px;
 $font-size-large: 24px;
 $font-size-larger: 36px;
-$font-size-xl: 144px;
+$font-size-ridiculous: 144px;
 
 @function parseInt($n) {
   @return $n / ($n * 0 + 1);
@@ -51,49 +52,3 @@ $font-size-xl: 144px;
     #{$property}: $rem;
   }
 }
-
-$FONT-FAMILY: 'Comic Sans MS', 'Open Sans', sans-serif;
-
-// Color Constants
-$pink: #FB5FC4;
-$dark-green: #497C11;
-$green: #7ED321;
-$grey: #9B9B9B;
-$black: #090909;
-$white: #FFFFFF;
-
-
-// Typography helpers
-%TEXT {
-    color: $black;
-    font-family: $FONT-FAMILY;
-    @include rem(font-size, 1.6rem);
-}
-
-%TEXT-GREY {
-    @extend %TEXT;
-    color: $grey;
-}
-
-%H1 {
-    @extend %TEXT;
-    @include rem(font-size, 3rem);
-}
-
-%H2 {
-    @extend %TEXT;
-    @include rem(font-size, 2rem);
-}
-
-%BODY-COPY {
-    @extend %TEXT-GREY;
-    @include rem(font-size, 2rem);
-}
-
-// Image styles
-@mixin border($color) {
-    border: 3px solid $color;
-}
-
-
-
