--- a/dev/scss/partials/_layout.scss
+++ b/dev/scss/partials/_layout.scss
@@ -1,12 +1,12 @@
 html, body {
     box-sizing: border-box;
-    // height: 100%;
+    height: 100%;
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: $font-size-base;
+    font-family: 'Fira Sans', 'Open Sans', sans-serif;
     font-smoothing: antialiased;
+    font-size: $font-size-base;
 }
 
 .flex {
