--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -5,8 +5,18 @@
 @import 'partials/components';
 
 body {
-  background: skyblue;
+  background-color: #2173a3;
   color: white;
+}
+
+.show {
+  opacity: 1;
+  transition: opacity 0.5s;
+}
+
+.hide {
+  opacity: 0;
+  transition: opacity 0.5s;
 }
 
 .hero {
@@ -33,14 +43,13 @@ body {
   }
 
   &__headline {
-    background-color: #5ca9d6;
-
     position: absolute;
     top: 0;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
   }
 
   &__header {
@@ -51,6 +60,30 @@ body {
     font-size: 3em;
     font-weight: 200;
     letter-spacing: .07em;
+  }
+
+  &__overlay {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+    background-color: #2173a3;
+
+    &.show {
+      opacity: 0.5;
+    }
+  }
+
+  &__line {
+    transition: opacity 0.5s;
+    fill: none;
+    stroke-width: 2;
+    stroke: #fff;
+
+    &--darker {
+      stroke: #aaa;
+    }
   }
 
   svg {
@@ -68,42 +101,6 @@ body {
       width: 90%;
     }
   }
-}
-
-.path {
-  stroke-dashoffset: 1000;
-  stroke-dasharray: 1000;
-}
-
-.show {
-  opacity: 1;
-  transition: opacity 0.5s;
-}
-
-.hide {
-  opacity: 0;
-  transition: opacity 0.5s;
-}
-
-.line-drawing,
-.illustration {
-  transition: opacity 0.5s;
-}
-
-.line-drawing path {
-  fill: none;
-  stroke: white;
-  stroke-width: 3;
-}
-
-svg.line-drawing path {
-  fill: none;
-  stroke-width: 2;
-  stroke: #ddd;
-}
-
-svg.line-drawing path.darker {
-  stroke: #aaa;
 }
 
 h1 {
